# polytopia

./: .gitignore  Cargo.toml  HOWZAT.FIX.md
cddlib-rs/: Cargo.toml
cddlib-sys/: Cargo.toml
howzat/: Cargo.toml  README.md
howzat-ffi-c/: Cargo.toml
howzat-ffi-py/: Cargo.toml
howzat-ffi-py/src/: lib.rs
howzat-kit/: Cargo.toml
howzat-kit/src/backend/: howzat_common.rs
howzat/src/dd/: engine.rs  index.rs  sat.rs  state.rs  tests.rs  zero.rs
howzat/src/dd/umpire/: int.rs  mod.rs  multi_precision.rs  single_precision.rs
howzat/tests/: find_umpire_counterexamples.rs  option_parity.rs
howzat/tests/support/: polydb.rs
hullabaloo/: Cargo.toml  DESIGN.md  README.md
hullabaloo-core/: Cargo.toml  DESIGN.md  README.md
hullabaloo-core/src/: adjacency.rs  adjacency_list.rs  lib.rs  matrix.rs  set_family.rs  types.rs
hullabaloo-core/tests/: adjacency_list.rs
hullabaloo-geom/: Cargo.toml  DESIGN.md  README.md
hullabaloo-geom/src/: drum.rs  lib.rs  matroid.rs
hullabaloo-geom/tests/: drum_promotion.rs  drum_stats.rs  drum_width.rs  matroid.rs
hullabaloo-geom/tests/support/: backend.rs
hullabaloo/src/: lib.rs
lrslib-rs/: Cargo.toml
lrslib-sys/: Cargo.toml
ppl-rs/: Cargo.toml  README.md
ppl-sys/: Cargo.toml  README.md  build.rs
