[workspace]
resolver = "3"
members = [
    "cddlib-sys",
    "cddlib-rs",
    "hullabaloo-core",
    "hullabaloo-geom",
    "hullabaloo",
    "howzat",
    "howzat-kit",
    "howzat-ffi-c",
    "howzat-ffi-py",
    "lrslib-sys",
    "lrslib-rs",
    "ppl-sys",
    "ppl-rs",
]

[profile.release-debug]
inherits = "release"
debug = true

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = "fat"
debug = false
panic = "abort"

[profile.release-lto-debug]
inherits = "release"
codegen-units = 1
lto = "fat"
debug = true
