[package]
name = "cddlib-sys"
version = "0.3.0"
edition = "2024"
license = "GPL-2.0-or-later"
description = "Raw FFI bindings to cddlib."
links = "cddlib"
build = "build.rs"
readme = "README.md"
repository = "https://github.com/khoek/howzat"

[lib]
name = "cddlib_sys"
path = "src/lib.rs"

[features]
f64 = []
gmp = ["dep:gmp-mpfr-sys"]
gmprational = ["dep:gmp-mpfr-sys"]
tools = []
pic = []
use-system-gmp = ["dep:gmp-mpfr-sys", "gmp-mpfr-sys/use-system-libs"]
default = ["f64", "gmp", "gmprational"]

[dependencies]
gmp-mpfr-sys = { version = "~1.6", default-features = false, optional = true, features = ["c-no-tests"] }

[build-dependencies]
syntheon = { version = "0.3.0" }
bindgen = "0.72"
