[package]
name = "howzat-ffi-c"
version = "0.3.1"
edition = "2024"
license = "AGPL-3.0-only"
description = "C bindings for howzat backend runner APIs."
readme = "README.md"
publish = true
repository = "https://github.com/khoek/howzat"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = []
use-system-gmp = ["howzat-kit/use-system-gmp"]

[dependencies]
howzat-kit = { path = "../howzat-kit", version = "0.3.1", features = ["pic"] }
hullabaloo = { package = "hullabaloo-core", path = "../hullabaloo-core", version = "0.3.1" }

calculo = { version = "0.3.1" }
gmp-mpfr-sys = { version = "~1.6", default-features = false }
rug = { version = "1", default-features = false, features = ["integer", "rational", "std"] }
