[package]
name = "howzat"
version = "0.3.2"
edition = "2024"
license = "AGPL-3.0-only"
description = "Dynamic double-description and LRS-backed polyhedral conversion with state-of-the-art performance."
readme = "README.md"
repository = "https://github.com/khoek/howzat"

[features]
default = ["rug", "dashu", "simd"]
rug = ["calculo/rug"]
dashu = ["calculo/dashu"]
simd = ["calculo/simd", "hullabaloo/simd"]

[dependencies]
hullabaloo = { package = "hullabaloo-core", path = "../hullabaloo-core", version = "0.3.1", default-features = false }

calculo = { version = "0.3.1", default-features = false }
ahash = "0.8"
smallvec = "1"

[dev-dependencies]
cddlib-rs = { path = "../cddlib-rs", version = "0.3.1" }

rstest = "0.26"

anyhow = "1"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "query", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
