[package]
name = "hullabaloo-core"
version = "0.3.1"
edition = "2024"
license = "AGPL-3.0-only"
description = "Core data structures and adjacency utilities for polyhedral tooling."
readme = "README.md"
repository = "https://github.com/khoek/howzat"

[lib]
name = "hullabaloo_core"
path = "src/lib.rs"

[features]
default = ["simd"]
simd = ["calculo/simd"]
serde = ["dep:serde"]

[dependencies]
calculo = { version = "0.3.1", default-features = false }

ahash = "0.8"
derive_more = { version = "2", features = ["add", "mul", "not", "display"] }
fixedbitset = "0.5"
smallvec = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
