[package]
name = "hullabaloo-geom"
version = "0.3.1"
edition = "2024"
license = "AGPL-3.0-only"
description = "Geometry construction layer for hullabaloo."
readme = "README.md"
repository = "https://github.com/khoek/howzat"

[lib]
name = "hullabaloo_geom"
path = "src/lib.rs"

[features]
default = ["simd"]
simd = ["calculo/simd", "hullabaloo-core/simd"]
serde = ["hullabaloo-core/serde"]

[dependencies]
hullabaloo-core = { path = "../hullabaloo-core", version = "0.3.1", default-features = false }

calculo = { version = "0.3.1", default-features = false }

[dev-dependencies]
cddlib-rs = { path = "../cddlib-rs", version = "0.3.1" }

anyhow = "1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
