[package]
name = "hullabaloo"
version = "0.3.1"
edition = "2024"
license = "AGPL-3.0-only"
description = "Backend-agnostic geometry construction utilities."
readme = "README.md"
repository = "https://github.com/khoek/howzat"

[lib]
name = "hullabaloo"
path = "src/lib.rs"

[features]
default = ["simd"]
simd = ["hullabaloo-core/simd", "hullabaloo-geom/simd"]
serde = ["hullabaloo-core/serde", "hullabaloo-geom/serde"]

[dependencies]
hullabaloo-core = { path = "../hullabaloo-core", version = "0.3.1", default-features = false }
hullabaloo-geom = { path = "../hullabaloo-geom", version = "0.3.1", default-features = false }
