[package]
name = "lrslib-rs"
version = "0.3.1"
edition = "2024"
license = "AGPL-3.0-only"
description = "Idiomatic Rust bindings around lrslib."
readme = "README.md"
repository = "https://github.com/khoek/howzat"

[lib]
name = "lrslib_rs"
path = "src/lib.rs"

[features]
default = []
gmp = ["dep:gmp-mpfr-sys", "lrslib-sys/gmp"]
use-system-gmp = ["lrslib-sys/use-system-gmp"]

[dependencies]
lrslib-sys = { path = "../lrslib-sys", version = "0.3.0" }
hullabaloo = { package = "hullabaloo-core", path = "../hullabaloo-core", version = "0.3.1" }

calculo = { version = "0.3.1", default-features = false, features = ["rug"] }

gmp-mpfr-sys = { version = "~1.6", default-features = false, optional = true }
thiserror = "2"
libc = "0.2"
rug = { version = "1", default-features = false, features = ["integer", "std"] }

[dev-dependencies]
cddlib-rs = { path = "../cddlib-rs", version = "0.3.1", features = ["gmprational"] }
