[package]
name = "ppl-sys"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Raw FFI bindings to the Parma Polyhedra Library (PPL)."
links = "ppl"
build = "build.rs"
readme = "README.md"
repository = "https://github.com/khoek/howzat"

[lib]
name = "ppl_sys"
path = "src/lib.rs"

[features]
default = ["gmp"]
gmp = ["dep:gmp-mpfr-sys"]
i64 = []
pic = []
use-system-gmp = ["dep:gmp-mpfr-sys", "gmp-mpfr-sys/use-system-libs"]

[dependencies]
gmp-mpfr-sys = { version = "~1.6", default-features = false, optional = true, features = ["c-no-tests", "cnodelete"] }

[build-dependencies]
syntheon = { version = "0.3.0" }
bindgen = "0.72"
